# chunk-embed

./: .gitignore  CLAUDE.md  README.md  gen_vbt_md.py  pyproject.toml  smoke_test.py  smoke_test_vbt.ipynb  smoke_test_vbt.py
.github/workflows/: release.yml
icons/: chunk_embed.icns
resources/: setup-help.html
resources/doc/: Implentation-notes.md  help-bge-m3.html  help-editor.html  help-postgresql.html
scripts/: build_rust_binaries.sh
src/chunk_embed/: __main__.py  _paths.py  cli.py  embed.py  format.py  gui.py  models.py  parse.py  pipeline.py  split.py  store.py
tests/: conftest.py  test_cli.py  test_embed.py  test_format.py  test_gui.py  test_parse.py  test_pipeline.py  test_split.py  test_store.py
tests/fixtures/: sample_chunks.json  sample_chunks_mixed.json  sample_chunks_perpage.json
