[project]
name = "chunk-embed"
version = "0.1.0"
description = "Embed text-chunker JSON output into pgvector for semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "modelscope>=1.34.0",
]

[project.scripts]
chunk-embed = "chunk_embed.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires PostgreSQL with pgvector",
    "slow: loads real embedding model (~2GB download)",
]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
