[project]
name = "chunk-embed"
version = "0.2.0"
description = "Embed text-chunker JSON output into pgvector for semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "tqdm>=4.66",
    "pyside6>=6.8",
    "lingua-language-detector>=2.0",
]

[project.scripts]
chunk-embed = "chunk_embed.cli:main"
chunk-embed-gui = "chunk_embed.gui:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires PostgreSQL with pgvector",
    "slow: loads real embedding model (~2GB download)",
    "sentenza: requires sentenza binary in PATH",
]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Briefcase packaging (macOS .app / .dmg)
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "Chunk Embed"
bundle = "dev.chunkembed"
version = "0.2.0"
url = "https://github.com/tlkahn/chunk-embed"
license.file = "LICENSE"
author = "tlkahn"
python_version_tag = "3.13"

[tool.briefcase.app.chunk_embed]
formal_name = "Chunk Embed"
description = "Semantic search for text chunks using BGE-M3 and pgvector"
icon = "icons/chunk_embed"
sources = ["src/chunk_embed"]
requires = [
    "click>=8.1",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyside6>=6.8",
    "lingua-language-detector>=2.0",
]

[tool.briefcase.app.chunk_embed.macOS]
min_os_version = "13.0"
universal_build = false
resources = ["resources/bin", "resources/doc"]
